--- a/pages/Produits/UC.html
+++ b/pages/Produits/UC.html
@@ -1,65 +1,59 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="../../assets/img/logo_lacapsule.webp" />
-    <link rel="stylesheet" href="../../style.css" />
-    <title>Ordinateur de Bureau</title>
-  </head>
 
-  <body>
-    <header>
-      <img
-        src="../../assets/img/logo_lacapsule.webp"
-        id="logo"
-        alt="Logo de la marque"
-      />
-      <h1>Cap' Store</h1>
-    </header>
-    <main>
-      <aside>
-        <button class="left"></button>
-      </aside>
-      <section>
-        <p>
-          L'Unité Centrale, l'Ordinateur ou encore la Tour, est l'outil
-          principal puisque tout les composants y sont intégrés (processeur,
-          disque dur, mémoire vive, etc...) et les outils aditionnels connectés
-          selon les modèles, (PCI, USB, VGA, HDMI, etc...)
-        </p>
-      </section>
-      <article
-        itemscope
-        itemtype="https://schema.org/IndividualProduct"
-        itemid="#product"
-      >
-        <h3 itemprop="name">Unité Centrale</h3>
-        <figure itemprop="image">
-          <img src="../../assets/img/ordinateur.webp" alt="Ordinateur" />
-          <figcaption itemprop="description">
-            Nos Unitées Centrale sont adaptées aux besoins de l'utilisateurs
-            (mémoire disque dur, mémoire vive, puissance processeur, etc...), en
-            fonction de nos matériels disponibles.
-          </figcaption>
-        </figure>
-        <h4>60€</h4>
-      </article>
-      <aside class="right">
-        <button></button>
-      </aside>
-    </main>
-    <footer>
-      <h5>
-        Tout nos matériels sont issus de récupérations ou dons reconditionnés et
-        vérifiés par nos équipes.
-      </h5>
-      <nav>
-        <a href="cgu.html" title="Conditions générales d'utilisation">CGU</a>
-        <a href="cgv.html" title="Conditions générales de vente">CGV</a>
-        <a href="Mentions.html" title="Mentions légales">Mentions légales</a>
-      </nav>
-    </footer>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="../../assets/img/logo_lacapsule.webp" />
+  <link rel="stylesheet" href="../../style.css" />
+  <title>Ordinateur de Bureau</title>
+</head>
+
+<body>
+  <header>
+    <img src="../../assets/img/logo_lacapsule.webp" id="logo" alt="Logo de la marque" />
+    <h1>Cap' Store</h1>
+  </header>
+  <main>
+    <aside>
+      <button class="left"></button>
+    </aside>
+    <section>
+      <p>
+        L'Unité Centrale, l'Ordinateur ou encore la Tour, est l'outil
+        principal puisque tout les composants y sont intégrés (processeur,
+        disque dur, mémoire vive, etc...) et les outils aditionnels connectés
+        selon les modèles, (PCI, USB, VGA, HDMI, etc...)
+      </p>
+    </section>
+    <article itemscope itemtype="https://schema.org/IndividualProduct" itemid="#product">
+      <h3 itemprop="name">Unité Centrale</h3>
+      <figure itemprop="image">
+        <img src="../../assets/img/pc.webp" alt="Ordinateur" />
+        <figcaption itemprop="description">
+          Nos Unitées Centrale sont adaptées aux besoins de l'utilisateurs
+          (mémoire disque dur, mémoire vive, puissance processeur, etc...), en
+          fonction de nos matériels disponibles.
+        </figcaption>
+      </figure>
+      <h4>60€</h4>
+    </article>
+    <aside class="right">
+      <button></button>
+    </aside>
+  </main>
+  <footer>
+    <h5>
+      Tout nos matériels sont issus de récupérations ou dons reconditionnés et
+      vérifiés par nos équipes.
+    </h5>
+    <nav>
+      <a href="cgu.html" title="Conditions générales d'utilisation">CGU</a>
+      <a href="cgv.html" title="Conditions générales de vente">CGV</a>
+      <a href="Mentions.html" title="Mentions légales">Mentions légales</a>
+    </nav>
+  </footer>
+</body>
+
 </html>
