--- a/pages/Produits/ecrans.html
+++ b/pages/Produits/ecrans.html
@@ -1,61 +1,55 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="../../assets/img/logo_lacapsule.webp" />
-    <link rel="stylesheet" href="../../style.css" />
-    <title>Ecrans</title>
-  </head>
 
-  <body>
-    <header>
-      <img
-        src="../../assets/img/logo_lacapsule.webp"
-        id="logo"
-        alt="Logo de la marque"
-      />
-      <h1>MARKET</h1>
-    </header>
-    <main>
-      <aside>
-        <button class="left"></button>
-      </aside>
-      <section>
-        <p>
-          Ecrans adaptés selon les besoins, nous disposons de différents modèles
-          s'adaptant à la comptabilité avec l'Unité Centrale (VGA, HMDI, DVI).
-        </p>
-      </section>
-      <article
-        itemscope
-        itemtype="https://schema.org/IndividualProduct"
-        itemid="#product"
-      >
-        <h3 itemprop="name">Ecrans</h3>
-        <figure itemprop="image">
-          <img src="../../assets/img/Screen.webp" alt="Screen" />
-          <figcaption itemprop="description">
-            L'outils indispensable pour surfer sur le web !
-          </figcaption>
-        </figure>
-        <h4>30€</h4>
-      </article>
-      <aside class="right">
-        <button></button>
-      </aside>
-    </main>
-    <footer>
-      <h5>
-        Tout nos matériels sont issus de récupérations ou dons reconditionnés
-        par nos équipes.
-      </h5>
-      <nav>
-        <a href="cgu.html" title="Conditions générales d'utilisation">CGU</a>
-        <a href="cgv.html" title="Conditions générales de vente">CGV</a>
-        <a href="Mentions.html" title="Mentions légales">Mentions légales</a>
-      </nav>
-    </footer>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="../../assets/img/logo_lacapsule.webp" />
+  <link rel="stylesheet" href="../../style.css" />
+  <title>Ecrans</title>
+</head>
+
+<body>
+  <header>
+    <img src="../../assets/img/logo_lacapsule.webp" id="logo" alt="Logo de la marque" />
+    <h1>MARKET</h1>
+  </header>
+  <main>
+    <aside>
+      <button class="left"></button>
+    </aside>
+    <section>
+      <p>
+        Ecrans adaptés selon les besoins, nous disposons de différents modèles
+        s'adaptant à la comptabilité avec l'Unité Centrale (VGA, HMDI, DVI).
+      </p>
+    </section>
+    <article itemscope itemtype="https://schema.org/IndividualProduct" itemid="#product">
+      <h3 itemprop="name">Ecrans</h3>
+      <figure itemprop="image">
+        <img src="../../assets/img/screen.webp" alt="Screen" />
+        <figcaption itemprop="description">
+          L'outils indispensable pour surfer sur le web !
+        </figcaption>
+      </figure>
+      <h4>30€</h4>
+    </article>
+    <aside class="right">
+      <button></button>
+    </aside>
+  </main>
+  <footer>
+    <h5>
+      Tout nos matériels sont issus de récupérations ou dons reconditionnés
+      par nos équipes.
+    </h5>
+    <nav>
+      <a href="cgu.html" title="Conditions générales d'utilisation">CGU</a>
+      <a href="cgv.html" title="Conditions générales de vente">CGV</a>
+      <a href="Mentions.html" title="Mentions légales">Mentions légales</a>
+    </nav>
+  </footer>
+</body>
+
 </html>
