--- a/pages/Produits/souris.html
+++ b/pages/Produits/souris.html
@@ -1,63 +1,57 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="../../assets/img/logo_lacapsule.webp" />
-    <link rel="stylesheet" href="../../style.css" />
-    <title>Souris</title>
-  </head>
 
-  <body>
-    <header>
-      <img
-        src="../../assets/img/logo_lacapsule.webp"
-        id="logo"
-        alt="Logo de la marque"
-      />
-      <h1>Cap' Store</h1>
-    </header>
-    <main>
-      <aside>
-        <button class="left"></button>
-      </aside>
-      <section>
-        <p>
-          la souris fait partie des indispensabls pour un Ordinateur de bureau
-          avec le clavier.
-        </p>
-      </section>
-      <article
-        itemscope
-        itemtype="https://schema.org/IndividualProduct"
-        itemid="#product"
-      >
-        <h3 itemprop="name">souris</h3>
-        <figure itemprop="image">
-          <img src="../../assets/img/mousse.webp" alt="Mousse" />
-          <figcaption itemprop="description">
-            Les Souris, différents modèles sont disponible selon les usages avec
-            les classiques clic gauche, clique droit et possibilité de molettes
-            plus boutons aditionnels selon modèles
-          </figcaption>
-        </figure>
-        <h4>10€</h4>
-      </article>
-      <aside class="right">
-        <button></button>
-      </aside>
-    </main>
-    <footer>
-      <h5>
-        Tout nos matériels sont issus de récupérations ou dons reconditionnés et
-        vérifiés par nos équipes.
-      </h5>
-      <nav>
-        <a href="cgu.html" title="Conditions générales d'utilisation">CGU</a>
-        <a href="cgv.html" title="Conditions générales de vente">CGV</a>
-        <a href="Mentions.html" title="Mentions légales">Mentions légales</a>
-      </nav>
-    </footer>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="../../assets/img/logo_lacapsule.webp" />
+  <link rel="stylesheet" href="../../style.css" />
+  <title>Souris</title>
+</head>
+
+<body>
+  <header>
+    <img src="../../assets/img/logo_lacapsule.webp" id="logo" alt="Logo de la marque" />
+    <h1>Cap' Store</h1>
+  </header>
+  <main>
+    <aside>
+      <button class="left"></button>
+    </aside>
+    <section>
+      <p>
+        la souris fait partie des indispensabls pour un Ordinateur de bureau
+        avec le clavier.
+      </p>
+    </section>
+    <article itemscope itemtype="https://schema.org/IndividualProduct" itemid="#product">
+      <h3 itemprop="name">souris</h3>
+      <figure itemprop="image">
+        <img src="../../assets/img/mouse.webp" alt="Mousse" />
+        <figcaption itemprop="description">
+          Les Souris, différents modèles sont disponible selon les usages avec
+          les classiques clic gauche, clique droit et possibilité de molettes
+          plus boutons aditionnels selon modèles
+        </figcaption>
+      </figure>
+      <h4>10€</h4>
+    </article>
+    <aside class="right">
+      <button></button>
+    </aside>
+  </main>
+  <footer>
+    <h5>
+      Tout nos matériels sont issus de récupérations ou dons reconditionnés et
+      vérifiés par nos équipes.
+    </h5>
+    <nav>
+      <a href="cgu.html" title="Conditions générales d'utilisation">CGU</a>
+      <a href="cgv.html" title="Conditions générales de vente">CGV</a>
+      <a href="Mentions.html" title="Mentions légales">Mentions légales</a>
+    </nav>
+  </footer>
+</body>
+
 </html>
