--- a/pages/catalogue.html
+++ b/pages/catalogue.html
@@ -1,43 +1,71 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="../assets/img/logo_lacapsule.webp" />
-    <link rel="stylesheet" href="../style.css" />
-    <title>Catalogue</title>
-  </head>
 
-  <body>
-    <header itemscope itemtype="https://schema.org/WebPage">
-      <img
-        itemprop="image"
-        src="../assets/img/logo_lacapsule.webp"
-        id="logo"
-        alt="Logo de la marque"
-      />
-      <nav itemprop="breadcrump">
-        <ul>
-          <li><a href="../index.html">Accueil</a></li>
-          <li><a href="./catalogue.html">Catalogue</a></li>
-          <li><a href="./contact.html">Contact</a></li>
-          <li><a href="./panier.html">Panier</a></li>
-        </ul>
-      </nav>
-      <h1 itemprop="about">Cap' Store</h1>
-    </header>
-    <main></main>
-    <footer itemscope itemtype="https://schema.org/WebPage">
-      <h5 itemprop="description">
-        Tout nos matériels sont issus de récupérations ou dons reconditionnés
-        par nos équipes.
-      </h5>
-      <nav itemtype="breadcrump">
-        <a href="cgu.html" title="Conditions générales d'utilisation">CGU</a>
-        <a href="cgv.html" title="Conditions générales de vente">CGV</a>
-        <a href="Mentions.html" title="Mentions légales">Mentions légales</a>
-      </nav>
-    </footer>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="../assets/img/logo_lacapsule.webp" />
+  <link rel="stylesheet" href="../style.css" />
+  <title>Catalogue</title>
+</head>
+
+<body>
+  <header itemscope itemtype="https://schema.org/WebPage">
+    <img itemprop="image" src="../assets/img/logo_lacapsule.webp" id="logo" alt="Logo de la marque" />
+    <nav itemprop="breadcrump">
+      <ul>
+        <li><a href="../index.html">Accueil</a></li>
+        <li><a href="./catalogue.html">Catalogue</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+        <li><a href="./panier.html">Panier</a></li>
+      </ul>
+    </nav>
+    <h1 itemprop="about">Cap' Store</h1>
+  </header>
+  <main>
+    <article>
+      <img src="../assets/img/keyboard.webp" alt="Clavier">
+      <h2>Claviers</h2>
+      <h3>Description</h3>
+      <p>20€</p>
+    </article>
+    <article>
+      <img src="../assets/img/mouse.webp" alt="Souris">
+      <h2>Souris</h2>
+      <h3>Description</h3>
+      <p>20€</p>
+    </article>
+    <article>
+      <img src="../assets/img/laptop.webp" alt="Portable">
+      <h2>PC Portable</h2>
+      <h3>Description</h3>
+      <p>60€</p>
+    </article>
+    <article>
+      <img src="../assets/img/pc.webp" alt="Unitée Centrale">
+      <h2>Unitée Centrales</h2>
+      <h3>Description</h3>
+      <p>60€</p>
+    </article>
+    <article>
+      <img src="../assets/img/screen.webp" alt="Ecran">
+      <h2>Ecran</h2>
+      <h3>Description</h3>
+      <p>20€</p>
+    </article>
+  </main>
+  <footer itemscope itemtype="https://schema.org/WebPage">
+    <h5 itemprop="description">
+      Tout nos matériels sont issus de récupérations ou dons reconditionnés
+      par nos équipes.
+    </h5>
+    <nav itemtype="breadcrump">
+      <a href="cgu.html" title="Conditions générales d'utilisation">CGU</a>
+      <a href="cgv.html" title="Conditions générales de vente">CGV</a>
+      <a href="Mentions.html" title="Mentions légales">Mentions légales</a>
+    </nav>
+  </footer>
+</body>
+
 </html>
