--- a/index.html
+++ b/index.html
@@ -1,93 +1,65 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./assets/img/logo_lacapsule.webp" />
-    <link rel="stylesheet" href="./style.css" />
-    <title>Cap' Store</title>
-  </head>
-  <body>
-    <header itemscope itemtype="https://schema.org/WebPage">
-      <img
-        itemprop="image"
-        src="./assets/img/logo_lacapsule.webp"
-        id="logo"
-        alt="Logo de la marque"
-      />
-      <nav itemprop="breadcrump">
-        <ul>
-          <li><a href="./index.html">Accueil</a></li>
-          <li><a href="./pages/catalogue.html">Catalogue</a></li>
-          <li><a href="./pages/contact.html">Contact</a></li>
-          <li><a href="./pages/panier.html">Panier</a></li>
-        </ul>
-      </nav>
-      <h1 itemprop="about">Cap' Store</h1>
-    </header>
-    <main itemscope itemtype="https://schema.org/WebPage">
-      <section itemscope itemtype="https://schema.org/Thing">
-        <aside itemprop="breadcrump">
-          <button></button>
-        </aside>
-        <img
-          itemprop="image"
-          src="./assets/img/keyboard.webp"
-          alt="Photo d'un clavier"
-        />
-        <img
-          itemprop="image"
-          src="./assets/img/laptop.webp"
-          alt="Photo d'un ordinateur portable"
-        />
-        <img
-          itemprop="image"
-          src="./assets/img/mouse.webp"
-          alt="Photo d'une souris d'ordinateur"
-        />
-        <img
-          itemprop="image"
-          src="./assets/img/pc.webp"
-          alt="Photo d'une unité centrale"
-        />
-        <img
-          itemprop="image"
-          src="./assets/img/screen.webp"
-          alt="Photo d'un écran d'ordinateur"
-        />
-      </section>
-      <p itemprop="description">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quo ut
-        libero corrupti itaque praesentium numquam quam dignissimos accusantium
-        officiis suscipit, soluta explicabo cum ipsum. Modi impedit facilis odio
-        iure eius ut fugit, non, repudiandae reprehenderit totam voluptate hic?
-        Facilis assumenda alias vel sunt maxime, cumque mollitia error
-        accusantium libero.
-      </p>
-      <section itemscope itemtype="https://schema.org/Clip">
-        <iframe
-          itemprop="video"
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/nHJajS8raQU"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen
-        ></iframe>
-      </section>
-    </main>
-    <footer itemscope itemtype="https://schema.org/WebPage">
-      <h5 itemprop="description">
-        Tout nos matériels sont issus de récupérations ou dons reconditionnés
-        par nos équipes.
-      </h5>
-      <nav itemprop="breadcrump">
-        <a href="cgu.html" title="Conditions générales d'utilisation">CGU</a>
-        <a href="cgv.html" title="Conditions générales de vente">CGV</a>
-        <a href="Mentions.html" title="Mentions légales">Mentions légales</a>
-      </nav>
-    </footer>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="./assets/img/logo_lacapsule.webp" />
+  <link rel="stylesheet" href="./style.css" />
+  <title>Cap' Store</title>
+</head>
+
+<body>
+  <header itemscope itemtype="https://schema.org/WebPage">
+    <img itemprop="image" src="./assets/img/logo_lacapsule.webp" id="logo" alt="Logo de la marque" />
+    <nav itemprop="breadcrump">
+      <ul>
+        <li><a href="./index.html">Accueil</a></li>
+        <li><a href="./pages/catalogue.html">Catalogue</a></li>
+        <li><a href="./pages/contact.html">Contact</a></li>
+        <li><a href="./pages/panier.html">Panier</a></li>
+      </ul>
+    </nav>
+    <h1 itemprop="about">Cap' Store</h1>
+  </header>
+  <main itemscope itemtype="https://schema.org/WebPage">
+    <section itemscope itemtype="https://schema.org/Thing">
+      <aside itemprop="breadcrump">
+        <button></button>
+      </aside>
+      <img itemprop="image" src="./assets/img/keyboard.webp" alt="Photo d'un clavier" />
+      <img itemprop="image" src="./assets/img/laptop.webp" alt="Photo d'un ordinateur portable" />
+      <img itemprop="image" src="./assets/img/mouse.webp" alt="Photo d'une souris d'ordinateur" />
+      <img itemprop="image" src="./assets/img/pc.webp" alt="Photo d'une unité centrale" />
+      <img itemprop="image" src="./assets/img/screen.webp" alt="Photo d'un écran d'ordinateur" />
+    </section>
+    <p itemprop="description">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quo ut
+      libero corrupti itaque praesentium numquam quam dignissimos accusantium
+      officiis suscipit, soluta explicabo cum ipsum. Modi impedit facilis odio
+      iure eius ut fugit, non, repudiandae reprehenderit totam voluptate hic?
+      Facilis assumenda alias vel sunt maxime, cumque mollitia error
+      accusantium libero.
+    </p>
+    <section itemscope itemtype="https://schema.org/Clip">
+      <iframe itemprop="video" width="560" height="315" src="https://www.youtube.com/embed/nHJajS8raQU"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen></iframe>
+    </section>
+  </main>
+  <footer itemscope itemtype="https://schema.org/WebPage">
+    <h5 itemprop="description">
+      Tout nos matériels sont issus de récupérations ou dons reconditionnés
+      par nos équipes.
+    </h5>
+    <nav itemprop="breadcrump">
+      <a href="cgu.html" title="Conditions générales d'utilisation">CGU</a>
+      <a href="cgv.html" title="Conditions générales de vente">CGV</a>
+      <a href="Mentions.html" title="Mentions légales">Mentions légales</a>
+    </nav>
+  </footer>
+</body>
+
 </html>
