--- a/pages/catalogue.html
+++ b/pages/catalogue.html
@@ -23,37 +23,42 @@
     </nav>
     <h1 itemprop="about">Cap' Store</h1>
   </header>
-  <main>
-    <article>
-      <img src="../assets/img/keyboard.webp" alt="Clavier">
-      <h2>Claviers</h2>
-      <h3>Description</h3>
-      <p>20€</p>
+  <main itemscope itemtype="https://schema.org/Thing" itemid="#thing">
+    <article itemscope itemtype="https://schema.org/IndividualProduct" itemid="#product">
+      <img itemprop="image" src="../assets/img/keyboard.webp" alt="Clavier">
+      <h2 itemprop="name">Claviers</h2>
+      <h3 itemprop="description">Description</h3>
+      <p itemprop="price">20€</p>
     </article>
-    <article>
-      <img src="../assets/img/mouse.webp" alt="Souris">
-      <h2>Souris</h2>
-      <h3>Description</h3>
-      <p>20€</p>
+
+    <article itemscope itemtype="https://schema.org/IndividualProduct" itemid="#product">
+      <img itemprop="image" src="../assets/img/screen.webp" alt="Ecrans">
+      <h2 itemprop="name">Ecrans</h2>
+      <h3 itemprop="description">Description</h3>
+      <p itemprop="price">20€</p>
     </article>
-    <article>
-      <img src="../assets/img/laptop.webp" alt="Portable">
-      <h2>PC Portable</h2>
-      <h3>Description</h3>
-      <p>60€</p>
+
+    <article itemscope itemtype="https://schema.org/IndividualProduct" itemid="#product">
+      <img itemprop="image" src="../assets/img/laptop.webp" alt="PC portable">
+      <h2 itemprop="name">PC portable</h2>
+      <h3 itemprop="description">Description</h3>
+      <p itemprop="price">60€</p>
     </article>
-    <article>
-      <img src="../assets/img/pc.webp" alt="Unitée Centrale">
-      <h2>Unitée Centrales</h2>
-      <h3>Description</h3>
-      <p>60€</p>
+
+    <article itemscope itemtype="https://schema.org/IndividualProduct" itemid="#product">
+      <img itemprop="image" src="../assets/img/mouse.webp" alt="Souris">
+      <h2 itemprop="name">Souris</h2>
+      <h3 itemprop="description">Description</h3>
+      <p itemprop="price">20€</p>
     </article>
-    <article>
-      <img src="../assets/img/screen.webp" alt="Ecran">
-      <h2>Ecran</h2>
-      <h3>Description</h3>
-      <p>20€</p>
+
+    <article itemscope itemtype="https://schema.org/IndividualProduct" itemid="#product">
+      <img itemprop="image" src="../assets/img/pc.webp" alt="Unitées Centrales">
+      <h2 itemprop="name">Unitées Centrales</h2>
+      <h3 itemprop="description">Description</h3>
+      <p itemprop="price">60€</p>
     </article>
+
   </main>
   <footer itemscope itemtype="https://schema.org/WebPage">
     <h5 itemprop="description">
