--- a/pages/catalogue.html
+++ b/pages/catalogue.html
@@ -23,37 +23,42 @@
     </nav>
     <h1 itemprop="about">Cap' Store</h1>
   </header>
-  <main itemscope itemtype="https://schema.org/Thing" itemid="#thing">
+  <main id="uc" itemscope itemtype="https://schema.org/Thing" itemid="#thing">
     <article itemscope itemtype="https://schema.org/IndividualProduct" itemid="#product">
-      <img itemprop="image" src="../assets/img/keyboard.webp" alt="Clavier">
+      <!-- <img itemprop="image" src="../assets/img/keyboard.webp" alt="Clavier"> -->
+      <div class="clavier"></div>
       <h2 itemprop="name">Claviers</h2>
       <h3 itemprop="description">Description</h3>
       <p itemprop="price">20€</p>
     </article>
 
     <article itemscope itemtype="https://schema.org/IndividualProduct" itemid="#product">
-      <img itemprop="image" src="../assets/img/screen.webp" alt="Ecrans">
+      <!-- <img itemprop="image" src="../assets/img/screen.webp" alt="Ecrans"> -->
+      <div class="screen"></div>
       <h2 itemprop="name">Ecrans</h2>
       <h3 itemprop="description">Description</h3>
       <p itemprop="price">20€</p>
     </article>
 
     <article itemscope itemtype="https://schema.org/IndividualProduct" itemid="#product">
-      <img itemprop="image" src="../assets/img/laptop.webp" alt="PC portable">
+      <!-- <img itemprop="image" src="../assets/img/laptop.webp" alt="PC portable"> -->
+      <div class="laptop"></div>
       <h2 itemprop="name">PC portable</h2>
       <h3 itemprop="description">Description</h3>
       <p itemprop="price">60€</p>
     </article>
 
     <article itemscope itemtype="https://schema.org/IndividualProduct" itemid="#product">
-      <img itemprop="image" src="../assets/img/mouse.webp" alt="Souris">
+      <!-- <img itemprop="image" src="../assets/img/mouse.webp" alt="Souris"> -->
+      <div class="mouse"></div>
       <h2 itemprop="name">Souris</h2>
       <h3 itemprop="description">Description</h3>
       <p itemprop="price">20€</p>
     </article>
 
     <article itemscope itemtype="https://schema.org/IndividualProduct" itemid="#product">
-      <img itemprop="image" src="../assets/img/pc.webp" alt="Unitées Centrales">
+      <!-- <img itemprop="image" src="../assets/img/pc.webp" alt="Unitées Centrales"> -->
+      <div class="pc"></div>
       <h2 itemprop="name">Unitées Centrales</h2>
       <h3 itemprop="description">Description</h3>
       <p itemprop="price">60€</p>
