--- a/pages/contact.html
+++ b/pages/contact.html
@@ -23,7 +23,22 @@
     </nav>
     <h1 itemprop="about">Cap' Store</h1>
   </header>
-  <main></main>
+  <main>
+    <form action="/ma-page-de-traitement" method="post">
+      <div>
+        <label for="name">Nom :</label>
+        <input type="text" id="name" name="user_name">
+      </div>
+      <div>
+        <label for="mail">e-mail&nbsp;:</label>
+        <input type="email" id="mail" name="user_mail">
+      </div>
+      <div>
+        <label for="msg">Message :</label>
+        <textarea id="msg" name="user_message"></textarea>
+      </div>
+    </form>
+  </main>
   <footer itemscope itemtype="https://schema.org/WebPage">
     <h5 itemprop="description">
       Tout nos matériels sont issus de récupérations ou dons reconditionnés
