Home page done.

--- a/index.html
+++ b/index.html
@@ -91,5 +91,6 @@
         <a href="Mentions.html" title="Mentions légales">Mentions légales</a>
       </nav>
     </footer>
+    <script src="./script.js"></script>
   </body>
 </html>
