--- a/pages/contact.html
+++ b/pages/contact.html
@@ -37,6 +37,7 @@
         <label for="msg">Message :</label>
         <textarea id="msg" name="user_message"></textarea>
       </div>
+      <button type="submit">envoyer</button>
     </form>
   </main>
   <footer itemscope itemtype="https://schema.org/WebPage">
