--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,56 +1,109 @@
 <!DOCTYPE html>
 <html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="../assets/img/logo_lacapsule.webp" />
+    <link rel="stylesheet" href="../style.css" />
+    <title>Contact</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" href="../assets/img/logo_lacapsule.webp" />
-  <link rel="stylesheet" href="../style.css" />
-  <title>Contact</title>
-</head>
+  <body>
+    <header itemscope itemtype="https://schema.org/WebPage">
+      <img
+        itemprop="image"
+        src="../assets/img/logo_lacapsule.webp"
+        id="logo"
+        alt="Logo de la marque"
+      />
+      <nav itemprop="breadcrump">
+        <ul>
+          <li><a href="../index.html">Accueil</a></li>
+          <li><a href="./catalogue.html">Catalogue</a></li>
+          <li><a href="./contact.html">Contact</a></li>
+          <li><a href="./panier.html">Panier</a></li>
+        </ul>
+      </nav>
+      <h1 itemprop="about">Cap' Store</h1>
+    </header>
+    <main>
+      <div class="contactContainer">
+        <section id="contact">
+          <h2>Nos Coordonnées</h2>
+          <address>2d Voie d'Accès au Port, 29600 Morlaix</address>
+          <div class="map">
+            <a
+              href="https://www.google.com/maps/place/La+Capsule+-+ULAMIR-CPIE/@48.5830217,-3.842607,15z/data=!4m5!3m4!1s0x0:0x17c10f279fba8957!8m2!3d48.5825107!4d-3.8352256"
+              target="_blank"
+              ><img src="../assets/img/map.webp" alt="Situation géographique"
+            /></a>
+          </div>
+          <h3>Tel : <a href="tel:+33786447752">07 86 44 77 52</a></h3>
+          <h3>E-Mail : <a href="#">exemple@gmail.com</a></h3>
+        </section>
 
-<body>
-  <header itemscope itemtype="https://schema.org/WebPage">
-    <img itemprop="image" src="../assets/img/logo_lacapsule.webp" id="logo" alt="Logo de la marque" />
-    <nav itemprop="breadcrump">
-      <ul>
-        <li><a href="../index.html">Accueil</a></li>
-        <li><a href="./catalogue.html">Catalogue</a></li>
-        <li><a href="./contact.html">Contact</a></li>
-        <li><a href="./panier.html">Panier</a></li>
-      </ul>
-    </nav>
-    <h1 itemprop="about">Cap' Store</h1>
-  </header>
-  <main>
-    <form action="/ma-page-de-traitement" method="post">
-      <div>
-        <label for="name">Nom :</label>
-        <input type="text" id="name" name="user_name">
+        <form method="post">
+          <div>
+            <label for="name"></label>
+            <input type="text" id="name" name="user_name" placeholder="Nom" />
+          </div>
+          <div>
+            <label for="mail"></label>
+            <input
+              type="email"
+              id="mail"
+              name="user_mail"
+              placeholder="Email"
+            />
+          </div>
+          <div>
+            <label for="msg"></label>
+            <textarea
+              id="msg"
+              name="user_message"
+              placeholder="Message"
+            ></textarea>
+          </div>
+          <button type="submit">Envoyer</button>
+        </form>
+        <table>
+          <thead>
+            <tr>
+              <th>Nos Horaires</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Lundi</td>
+              <td>9h - 17h</td>
+            </tr>
+            <tr>
+              <td>Mardi</td>
+              <td>9h - 17h</td>
+            </tr>
+            <tr>
+              <td>Jeudi</td>
+              <td>9h - 17h</td>
+            </tr>
+            <tr>
+              <td>Vendredi</td>
+              <td>9h - 17h</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
-      <div>
-        <label for="mail">e-mail&nbsp;:</label>
-        <input type="email" id="mail" name="user_mail">
-      </div>
-      <div>
-        <label for="msg">Message :</label>
-        <textarea id="msg" name="user_message"></textarea>
-      </div>
-      <button type="submit">envoyer</button>
-    </form>
-  </main>
-  <footer itemscope itemtype="https://schema.org/WebPage">
-    <h5 itemprop="description">
-      Tout nos matériels sont issus de récupérations ou dons reconditionnés
-      par nos équipes.
-    </h5>
-    <nav itemtype="breadcrump">
-      <a href="cgu.html" title="Conditions générales d'utilisation">CGU</a>
-      <a href="cgv.html" title="Conditions générales de vente">CGV</a>
-      <a href="Mentions.html" title="Mentions légales">Mentions légales</a>
-    </nav>
-  </footer>
-</body>
-
+    </main>
+    <footer itemscope itemtype="https://schema.org/WebPage">
+      <h5 itemprop="description">
+        Tout nos matériels sont issus de récupérations ou dons reconditionnés
+        par nos équipes.
+      </h5>
+      <nav itemtype="breadcrump">
+        <a href="cgu.html" title="Conditions générales d'utilisation">CGU</a>
+        <a href="cgv.html" title="Conditions générales de vente">CGV</a>
+        <a href="Mentions.html" title="Mentions légales">Mentions légales</a>
+      </nav>
+    </footer>
+  </body>
 </html>
