Style tableau horaires

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -67,12 +67,9 @@
           </div>
           <button type="submit">Envoyer</button>
         </form>
+
+        <h2>Nos horaires</h2>
         <table>
-          <thead>
-            <tr>
-              <th>Nos Horaires</th>
-            </tr>
-          </thead>
           <tbody>
             <tr>
               <td>Lundi</td>
