--- a/pages/contact.html
+++ b/pages/contact.html
@@ -40,31 +40,22 @@
             /></a>
           </div>
           <h3>Tel : <a href="tel:+33786447752">07 86 44 77 52</a></h3>
-          <h3>E-Mail : <a href="#">exemple@gmail.com</a></h3>
+          <h3>
+            E-Mail : <a href="mailto:exemple@gmail.com">exemple@gmail.com</a>
+          </h3>
         </section>
 
         <form method="post">
-          <div>
-            <label for="name"></label>
-            <input type="text" id="name" name="user_name" placeholder="Nom" />
-          </div>
-          <div>
-            <label for="mail"></label>
-            <input
-              type="email"
-              id="mail"
-              name="user_mail"
-              placeholder="Email"
-            />
-          </div>
-          <div>
-            <label for="msg"></label>
-            <textarea
-              id="msg"
-              name="user_message"
-              placeholder="Message"
-            ></textarea>
-          </div>
+          <label for="name"></label>
+          <input type="text" id="name" name="user_name" placeholder="Nom" />
+          <label for="mail"></label>
+          <input type="email" id="mail" name="user_mail" placeholder="Email" />
+          <label for="msg"></label>
+          <textarea
+            id="msg"
+            name="user_message"
+            placeholder="Message"
+          ></textarea>
           <button type="submit">Envoyer</button>
         </form>
 
