--- a/pages/panier.html
+++ b/pages/panier.html
@@ -23,7 +23,9 @@
     </nav>
     <h1 itemprop="about">Cap' Store</h1>
   </header>
-  <main></main>
+  <main>
+
+  </main>
   <footer itemscope itemtype="https://schema.org/WebPage">
     <h5 itemprop="description">
       Tout nos matériels sont issus de récupérations ou dons reconditionnés
