Responsive catalogue.css à revoir

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </div>
         </div>
       </div>
-      <p itemprop="description">
+      <p class="accueil" itemprop="description">
         Le chantier répond aux besoins du territoire en terme de matériel
         informatique reconditionné. Avec une moyenne de 400 matériels complets
         (Tour PC, écran LCD, souris, clavier et carte réseau WiFi), le chantier
